# istatserverlinux

./: CHANGELOG.md  config.h.in~  configure.ac  configure~  get-istatserver.sh  readme.md
conf/: istatserverconf
resource/: Makefile.am
resource/systemd/: istatserver.service
src/: Certificate.cpp  Socketset.cpp  Stats.cpp  Utility.h  main.cpp
src/stats/: StatBase.h  StatsSensors.cpp  StatsSensors.h
